# Automotive-Android

./: README.md
Android_Customization/01_Session/: README.md
Android_Customization/02_Session/: README.md
Android_Customization/04_Session/: README.md
Android_Customization/05_Session/: README.md
Android_Customization/06_Session/: README.md
Automotive_Standards/03_ASPICE/: README.md
Automotive_Standards/Functional_Safety/: README.md
C++/01_Session/: README.md
C++/Task_01/: 03_BinrayToDecimal.cpp  04_CityPopulation.cpp
Device_Drivers/01_Session/: README.md
Device_Drivers/02_Session/: README.md
Device_Drivers/04_Session/: README.md
EL_Build_Systems(Yocto)/01_BuildRoot/: README.md
EL_Build_Systems(Yocto)/03_rbpi3_sato/: README.md
Embedded_Linux/01_Library/: README.md
Embedded_Linux/02_Cross_compile/: README.md
Embedded_Linux/03_SysCall&Booting&FS/: README.md
Embedded_Linux/03_Uboot/: README.md
Embedded_Linux/04_UBoot/: README.md
Embedded_Linux/05_RbPI_boot/: README.md
Embedded_Linux/06_UBoot2/: README.md
Embedded_Linux/07_Linux/: README.md
Embedded_Linux/08_BusyBox(RootFS)/: README.md
Embedded_Linux/09_InitRamFS+NFS/: README.md
Embedded_Linux/10_lab_rbpi/: README.md
Embedded_Linux/11_Recap/: README.md
Embedded_Linux/12_init_process/: README.md
Embedded_Linux/12_init_process(sysv)/: README.md
Embedded_Linux/13_BuildRoot/: README.md
Embedded_Linux/14_BuildRoot/: README.md
Food_Planner/: settings.gradle.kts
JNI/01_Session/lab/app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
Product_APP_MVC/: settings.gradle.kts
(+901 files in other folders)
